puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Integrations/content/Views/Integrations/Facebook.cshtml.pp
@{
    ViewBag.Title = "Reports";
}

<div class="page-header">
    <h1>Integrate with Facebook</h1>
</div>
